--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item">
                         <div class="our-project">
                             <div class="img">
-                                <img href="#" src="../img/portofolio-1.jpg" alt="portofolio-1">
+                                <img href="#" src="img/portofolio-1.jpg" alt="portofolio-1">
                             </div>
                             <div class="title py-4">
                                 <h4 class="text-uppercase">Hexyn</h4>
@@ -76,7 +76,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item">
                         <div class="our-project">
                             <div class="img">
-                                <img href="#" src="../img/portofolio-2.jpg" alt="portofolio-1">
+                                <img href="#" src="img/portofolio-2.jpg" alt="portofolio-1">
                             </div>
                             <div class="title py-4">
                                 <h4 class="text-uppercase">Minimal Design</h4>
@@ -87,7 +87,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item">
                         <div class="our-project">
                             <div class="img">
-                                <img href="#" src="../img/portofolio-3.jpg" alt="portofolio-1">
+                                <img href="#" src="img/portofolio-3.jpg" alt="portofolio-1">
                             </div>
                             <div class="title py-4">
                                 <h4 class="text-uppercase">Minimal Design</h4>
@@ -106,7 +106,7 @@
         <section id="about">
             <div class="container">
                 <div class="text-container">
-                    <img src="../img/about-me.jpg" alt="about-me-img">
+                    <img src="img/about-me.jpg" alt="about-me-img">
                     <span>
                         <div class="about_me-title-container">
                             <h1 class="about_me-title">about me</h1>
