--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         </div>
                     </div>
                     <div class="portofolio_view-more">
-                        <a href="#home" class="view-more_text">View more projects ></a>
+                        <a href="projects.html" class="view-more_text">View more projects ></a>
                     </div>
                 </div>
             </div>
