--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,36 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projects</title>
+    <link rel="stylesheet" href="css/projects.css">
+<body>
+    <nav>
+        <div class="logo">
+            <a href="/">C<span>P</span></a>
+        </div>
+        <ul class="nav-links">
+            <li>
+                <a href="/">HOME</a>
+            </li>
+            <li>
+                <a href="/#work">WORK</a>
+            </li>
+            <li>
+                <a href="/#about">ABOUT</a>
+            </li>
+            <li>
+                <a href="/#contact">CONTACT</a>
+            </li>
+        </ul>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+    </nav>
+    <script src="js/main.js"></script>
+</body>
+</html>
