projects page update

--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="css/projects.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 <body>
     <nav>
         <div class="logo">
@@ -31,6 +33,66 @@
             <div class="line3"></div>
         </div>
     </nav>
+    <!-- END NAV BAR -->
+
+    <div class="title-text">
+        <h1>Projects</h1>
+    </div>
+
+    <div class="container">
+        <div class="row grid">
+            <div class="col-lg-4 col-md-6 col-sm-12 element-item latest">
+                <div class="our-project">
+                    <div class="img">
+                        <img src="img/portofolio-1.jpg" alt="portofolio1">
+                    </div>
+                    <div class="title py-4">
+                        <h4 class="text-uppercase">Hexyn</h4>
+                        <span class="text-secondary">Latest</span>
+                    </div>
+                </div>
+            </div>
+            <!-- END 1 -->
+            <div class="col-lg-4 col-md-6 col-sm-12 element-item latest">
+                <div class="our-project">
+                    <div class="img">
+                        <img src="img/portofolio-4.jpg" alt="portofolio1">
+                    </div>
+                    <div class="title py-4">
+                        <h4 class="text-uppercase">Hexyn</h4>
+                        <span class="text-secondary">Latest</span>
+                    </div>
+                </div>
+            </div>
+            <!-- END 2 -->
+            <div class="col-lg-4 col-md-6 col-sm-12 element-item latest">
+                <div class="our-project">
+                    <div class="img">
+                        <img src="img/portofolio-3.jpg" alt="portofolio1">
+                    </div>
+                    <div class="title py-4">
+                        <h4 class="text-uppercase">Hexyn</h4>
+                        <span class="text-secondary">Latest</span>
+                    </div>
+                </div>
+            </div>
+            <!-- END 3 -->
+            <div class="col-lg-4 col-md-6 col-sm-12 element-item latest">
+                <div class="our-project">
+                    <div class="img">
+                        <img src="img/portofolio-6.jpg" alt="portofolio1">
+                    </div>
+                    <div class="title py-4">
+                        <h4 class="text-uppercase">Hexyn</h4>
+                        <span class="text-secondary">Latest</span>
+                    </div>
+                </div>
+            </div>
+            <!-- END 4 -->
+        </div>
+    </div>
+
+
     <script src="js/main.js"></script>
 </body>
 </html>
