--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <h1 class="title-h1">projects i've worked on <span> &#10140;</span></h1>
                 </div>
                 <div class="row grid" style="margin: auto">
-                    <div class="col-lg-4 col-md-6 col-sm-12 element-item">
+                    <div class="col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center">
                         <div class="our-project">
                             <div class="img">
                                 <img href="#" src="img/portofolio-1.jpg" alt="portofolio-1">
@@ -73,7 +73,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 element-item">
+                    <div class="col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center">
                         <div class="our-project">
                             <div class="img">
                                 <img href="#" src="img/portofolio-2.jpg" alt="portofolio-1">
@@ -84,7 +84,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 element-item">
+                    <div class="col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center">
                         <div class="our-project">
                             <div class="img">
                                 <img href="#" src="img/portofolio-3.jpg" alt="portofolio-1">
@@ -106,7 +106,7 @@
         <section id="about">
             <div class="container">
                 <div class="text-container">
-                    <img src="img/about-me.jpg" alt="about-me-img">
+                    <img src="img/about-me.svg" alt="about-me-img">
                     <span>
                         <div class="about_me-title-container">
                             <h1 class="about_me-title">about me</h1>
