--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="css/projects.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat:wght@700&family=Open+Sans:ital,wght@0,700;1,600&family=Roboto+Slab&family=Source+Code+Pro:wght@300;400&family=Staatliches&family=Work+Sans:wght@100;400&display=swap">
 <body>
     <nav>
         <div class="logo">
@@ -40,8 +43,8 @@
     </div>
 
     <div class="container">
-        <div class="row grid">
-            <div class="col-lg-4 col-md-6 col-sm-12 element-item latest">
+        <div class="row justify-content-center">
+            <div class="col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center">
                 <div class="our-project">
                     <div class="img">
                         <img src="img/portofolio-1.jpg" alt="portofolio1">
@@ -53,7 +56,7 @@
                 </div>
             </div>
             <!-- END 1 -->
-            <div class="col-lg-4 col-md-6 col-sm-12 element-item latest">
+            <div class="col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center">
                 <div class="our-project">
                     <div class="img">
                         <img src="img/portofolio-4.jpg" alt="portofolio1">
@@ -65,7 +68,7 @@
                 </div>
             </div>
             <!-- END 2 -->
-            <div class="col-lg-4 col-md-6 col-sm-12 element-item latest">
+            <div class="col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center">
                 <div class="our-project">
                     <div class="img">
                         <img src="img/portofolio-3.jpg" alt="portofolio1">
@@ -77,7 +80,7 @@
                 </div>
             </div>
             <!-- END 3 -->
-            <div class="col-lg-4 col-md-6 col-sm-12 element-item latest">
+            <div class="col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center">
                 <div class="our-project">
                     <div class="img">
                         <img src="img/portofolio-6.jpg" alt="portofolio1">
