--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                 <h3 class="title_text_welcome">Welcome to my website!</h3>
                 <h1>Hi! <br> I'm <span class="typed-text"></span><span class="cursor">&nbsp;</span></h1>
                 <div class="social">
-                    <a href="#" class="fa fa-linkedin"></a>
-                    <a href="#" class="fa fa-github"></a>
-                    <a href="#" class="fa fa-twitter"></a>
+                    <a href="#" class="fa fa-linkedin" aria-label="LinkedIn"></a>
+                    <a href="#" class="fa fa-github" aria-label="GitHub"></a>
+                    <a href="#" class="fa fa-twitter" aria-lebel="Twitter"></a>
                 </div>
                 <div class ="work_button">
                     <a href="#work" id="workButton" title="View My Work">VIEW MY WORK</a>
@@ -96,7 +96,7 @@
                         </div>
                     </div>
                     <div class="portofolio_view-more">
-                        <a href="projects.html" class="view-more_text">View more projects ></a>
+                        <a href="projects.html" class="view-more_text" aria-label="Visit Projects Page">View more projects ></a>
                     </div>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                         <div class="about_me-desc-container">
                             <span class="about_me-desc">Hello! I'm a software and web developer from Bistrița, Romania. I enjoy
                                 building and developing apps and I am passionate about bringing ideas into reality. If you are a business
-                                seeking a web presence or an employer looking to hire, you can get in touch with me.
+                                seeking a web presence or an employer looking to hire, get in touch with me.
                             </span>
                         </div>
                     </span>
@@ -131,17 +131,26 @@
                     <h4>E-mail:</h4>
                     <h5>cristi.pop719@gmail.com</h5>
                 </div>
+                <ul class="list-inline">
+                    <li class="list-inline-item"><a href="#" class="fa fa-linkedin" aria-label="LinkedIn"></a></li>
+                    <li class="list-inline-item"><a href="#" class="fa fa-github" aria-label="GitHub"></a></li>
+                    <li class="list-inline-item"><a href="#" class="fa fa-twitter" aria-label="Twitter"></a></li>
+                </ul>
+                <!-- <div class="footer-email">
+                    <h4>E-mail:</h4>
+                    <h5>cristi.pop719@gmail.com</h5>
+                </div>
                 <div class="footer-social">
                     <h4>Social Media:</h4>
-                    <a href="#" class="fa fa-linkedin"></a>
-                    <a href="#" class="fa fa-github"></a>
-                    <a href="#" class="fa fa-twitter"></a>
-                </div>
+                    <a href="#" class="fa fa-linkedin" aria-label="LinkedIn"></a>
+                    <a href="#" class="fa fa-github" aria-label="GitHub"></a>
+                    <a href="#" class="fa fa-twitter" aria-label="Twitter"></a>
+                </div> -->
               
                 <!-- Copyright -->
                 <div class="text-center p-3" style="color: #F2BA38;">
                   © 2021 Copyright
-                  <a class="text-white"href="https://github.com/funnker">Made with &#10084 by Cristi</a>
+                  <a class="text-white"href="https://github.com/funnker">Made with &#10084 by Cristian</a>
                 </div>
                 <!-- Copyright -->
               </footer>
