work page update

--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat:wght@700&family=Open+Sans:ital,wght@0,700;1,600&family=Roboto+Slab&family=Source+Code+Pro:wght@300;400&family=Staatliches&family=Work+Sans:wght@100;400&display=swap">
 <body>
@@ -94,6 +95,40 @@
             <!-- END 4 -->
         </div>
     </div>
+
+     <!-- FOOTER SECTION -->
+     <section id="contact">
+        <hr>
+        <footer class="footer-distributed">
+        <!-- Section: Social media -->
+            <div class="footer-email">
+                <h4>E-mail:</h4>
+                <h5>cristi.pop719@gmail.com</h5>
+            </div>
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="#" class="fa fa-linkedin" aria-label="LinkedIn"></a></li>
+                <li class="list-inline-item"><a href="#" class="fa fa-github" aria-label="GitHub"></a></li>
+                <li class="list-inline-item"><a href="#" class="fa fa-twitter" aria-label="Twitter"></a></li>
+            </ul>
+            <!-- <div class="footer-email">
+                <h4>E-mail:</h4>
+                <h5>cristi.pop719@gmail.com</h5>
+            </div>
+            <div class="footer-social">
+                <h4>Social Media:</h4>
+                <a href="#" class="fa fa-linkedin" aria-label="LinkedIn"></a>
+                <a href="#" class="fa fa-github" aria-label="GitHub"></a>
+                <a href="#" class="fa fa-twitter" aria-label="Twitter"></a>
+            </div> -->
+          
+            <!-- Copyright -->
+            <div class="text-center p-3" style="color: #F2BA38;">
+              © 2021 Copyright
+              <a class="text-white"href="https://github.com/funnker">Made with &#10084 by Cristian</a>
+            </div>
+            <!-- Copyright -->
+          </footer>
+    </section>
 
 
     <script src="js/main.js"></script>
