--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     </head>
     
     <body>
-        <button onclick="topFunction()" id="topButton" title="Go to top">Top</button>
+        <a id="topButton" title="Go to top"></a>
+        <!-- <button onclick="topFunction()" id="topButton" title="Go to top"></button> -->
         <nav>
             <div class="logo">
                 <a href="/">C<span>P</span></a>
@@ -44,8 +45,8 @@
                 <h3 class="title_text_welcome">Welcome to my website!</h3>
                 <h1>Hi! <br> I'm <span class="typed-text"></span><span class="cursor">&nbsp;</span></h1>
                 <div class="social">
-                    <a href="#" class="fa fa-linkedin" aria-label="LinkedIn"></a>
-                    <a href="#" class="fa fa-github" aria-label="GitHub"></a>
+                    <a href="https://www.linkedin.com/in/cristi-pop/" class="fa fa-linkedin" aria-label="LinkedIn"></a>
+                    <a href="https://github.com/funnker" class="fa fa-github" aria-label="GitHub"></a>
                     <a href="#" class="fa fa-twitter" aria-lebel="Twitter"></a>
                 </div>
                 <div class ="work_button">
@@ -65,22 +66,22 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center">
                         <div class="our-project">
                             <div class="img">
-                                <img href="#" src="img/portofolio-1.jpg" alt="portofolio-1">
+                                <img href="https://github.com/funnker/Hexyn" src="img/portofolio-1.jpg" alt="portofolio-1">
                             </div>
                             <div class="title py-4">
                                 <h4 class="text-uppercase">Hexyn</h4>
-                                <a href="#home" class="text-secondary">Learn more ></a>
+                                <a href="https://github.com/funnker/Hexyn" class="text-secondary">Learn more ></a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center">
                         <div class="our-project">
                             <div class="img">
-                                <img href="#" src="img/portofolio-2.jpg" alt="portofolio-1">
+                                <img href="https://funnker.github.io/To-Do-List/" src="img/portofolio-2.jpg" alt="portofolio-1">
                             </div>
                             <div class="title py-4">
-                                <h4 class="text-uppercase">Minimal Design</h4>
-                                <a href="#home" class="text-secondary">Learn more ></a>
+                                <h4 class="text-uppercase"></h4>
+                                <a href="https://funnker.github.io/To-Do-List/" class="text-secondary">Learn more ></a>
                             </div>
                         </div>
                     </div>
@@ -90,7 +91,7 @@
                                 <img href="#" src="img/portofolio-3.jpg" alt="portofolio-1">
                             </div>
                             <div class="title py-4">
-                                <h4 class="text-uppercase">Minimal Design</h4>
+                                <h4 class="text-uppercase">Item-3</h4>
                                 <a href="#home" class="text-secondary">Learn more ></a>
                             </div>
                         </div>
@@ -112,10 +113,13 @@
                             <h1 class="about_me-title">about me</h1>
                         </div>
                         <div class="about_me-desc-container">
-                            <span class="about_me-desc">Hello! I'm a software and web developer from Bistrița, Romania. I enjoy
-                                building and developing apps and I am passionate about bringing ideas into reality. If you are a business
-                                seeking a web presence or an employer looking to hire, get in touch with me.
+                            <span class="about_me-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Autem quo minus delectus sunt minima dolorum non atque cumque repellat, 
+                                sequi vel praesentium debitis aspernatur reprehenderit fugiat sit, nihil totam dolore!
                             </span>
+                            <!-- Hello! I'm a software and web developer from Bistrița, Romania. I enjoy
+                                building and developing apps and I am passionate about bringing ideas into reality. If you are a business
+                                seeking a web presence or an employer looking to hire, get in touch with me. -->
                         </div>
                     </span>
                 </div>
@@ -132,8 +136,8 @@
                     <h5>cristi.pop719@gmail.com</h5>
                 </div>
                 <ul class="list-inline">
-                    <li class="list-inline-item"><a href="#" class="fa fa-linkedin" aria-label="LinkedIn"></a></li>
-                    <li class="list-inline-item"><a href="#" class="fa fa-github" aria-label="GitHub"></a></li>
+                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/cristi-pop/" class="fa fa-linkedin" aria-label="LinkedIn"></a></li>
+                    <li class="list-inline-item"><a href="https://github.com/funnker" class="fa fa-github" aria-label="GitHub"></a></li>
                     <li class="list-inline-item"><a href="#" class="fa fa-twitter" aria-label="Twitter"></a></li>
                 </ul>
                 <!-- <div class="footer-email">
