--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 <img href="#" src="img/portofolio-3.jpg" alt="portofolio-1">
                             </div>
                             <div class="title py-4">
-                                <h4 class="text-uppercase">Item-3</h4>
+                                <h4 class="text-uppercase">Coming Soon</h4>
                                 <a href="#home" class="text-secondary">Learn more ></a>
                             </div>
                         </div>
@@ -113,13 +113,10 @@
                             <h1 class="about_me-title">about me</h1>
                         </div>
                         <div class="about_me-desc-container">
-                            <span class="about_me-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                Autem quo minus delectus sunt minima dolorum non atque cumque repellat, 
-                                sequi vel praesentium debitis aspernatur reprehenderit fugiat sit, nihil totam dolore!
-                            </span>
-                            <!-- Hello! I'm a software and web developer from Bistrița, Romania. I enjoy
+                            <span class="about_me-desc">Hello! I'm a software and web developer from Bistrița, Romania. I enjoy
                                 building and developing apps and I am passionate about bringing ideas into reality. If you are a business
-                                seeking a web presence or an employer looking to hire, get in touch with me. -->
+                                seeking a web presence or an employer looking to hire, we should get in touch :)
+                            </span>
                         </div>
                     </span>
                 </div>
